--- a/css/main.css
+++ b/css/main.css
@@ -555,7 +555,7 @@ header {
 
 @media (max-width:610px) {
     .about .sec-3 .swiper {
-        width: 370px;
+        width: 335px;
     }
 }
 
@@ -818,7 +818,7 @@ header {
 
 .portofolio {
     width: 100%;
-    height: 100%;
+    height: 100vh;
     background-color: var(--background-color);
     position: absolute;
     left: -100%;
@@ -826,12 +826,18 @@ header {
     transition: var(--main-transition);
 }
 
+@media (max-width:1199px) {
+    .portofolio {
+        height: fit-content;
+    }
+}
+
 .portofolio .pop {
     position: absolute;
-    height: 67%;
+    height: 303px;
     z-index: -1;
-    left: -200px;
-    top: -294px;
+    left: -85px;
+    top: -108px;
     animation: onoff 5s ease-in infinite;
 }
 
@@ -884,6 +890,7 @@ header {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    flex-wrap: wrap;
     gap: 30px;
 }
 
@@ -923,7 +930,7 @@ header {
 .contact .container {
     display: flex;
     flex-direction: column;
-    height: 100vh;
+    /* height: 100vh; */
     justify-content: center;
 }
 
